# preschool-social-ecology

./: .gitignore  pyproject.toml
notebooks/: quantex_results.ipynb
src/: config.py  constants.py  entrypoint.py  finished_videos.txt  launch_gpu_training.py  utils.py
src/01_models/: process_videos.py  setup_db.py
src/01_models/face/: evaluate_yolo.py
src/02_inference/: run_book.py  setup_inference_db.py  utils.py
src/03_analysis/: eval_segment_gt_combine.py  rq_04_presence.py  tune_hyperparameters.py  utils.py
src/analysis/: pipeline_frame_level_analysis.py  pipeline_runner.py  pipeline_video_level_analysis.py  rq_02_kcs.py  rq_03_kcds.py  rq_04_turn_taking.py  tune_hyperparameters.py
src/analysis/validation/: eval_segment_performance.py
src/evaluation/: HYPERPARAMETER_TUNING_README.md  README_rule_ablation.md  eval_segment_performance.py  plot_segments.py  rule_ablation_analysis.py  run_hyperparameter_tuning.py  run_rule_ablation.py  tune_hyperparameters.py  utils.py
src/inference/: inference.py  main.py  populate_speech_db.py  run_book.py  run_face_proximity.py  run_person.py  run_person_seg.py  run_pipeline.py  run_speech_type.py  run_yolo.py  run_yolo_det.py  setup_detection_database.py  setup_interaction_db.py  utils.py
src/models/: add_alice_output_to_db.py  run_yolo_book.py  setup_db.py
src/models/face/: dataset.yaml  (+16 more)
src/models/videollama3/: app.py  model_setup.py  pyproject.toml
src/prepare_data/: crop_detections.py  main.py  prepare_dataset.py  process_videos.py
src/preprocessing/: check_raframes_extraction.ipynb  check_rawframes_extraction.ipynb  process_videos.py  rq_01_analysis.ipynb
src/results/: 01_video_level_analysis.py  create_annotated_video.py  eval_irr.py  eval_kappa.py  eval_segment_gt.py  eval_segment_performance.py  frame_level_analysis.py  pipeline_frame_level_analysis.py  pipeline_runner.py  plot_secondwise_comparison.py  queries.py  rq_01_analysis.ipynb  rq_01_frame_level_analysis.py  rq_01_kcs.py  rq_01_queries.py  rq_01_video_level_analysis.py  rq_02_kcs.py  rq_02_turn_taking.py  rq_02_words.py  rq_03_cds.py  rq_03_queries.py  rq_03_speech.py  rq_03_turn_taking.py  rq_04_cds.py  rq_05_interaction_composition.py  rq_05_presence.py  rq_06_interaction_composition.py  rq_06_interaction_composition_frames.py  time_alone.py  tune_hyperparameters.py  utils.py  video_level_analysis.py
src/visualization/: create_annotated_video.py
(+45 files in other folders)
