[tool.poetry]
name = "leuphana_ipe"
version = "0.1.0"
description = ""
authors = ["neleSuffo <163427736+neleSuffo@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "~3.8"
opencv-python = "*"
tqdm = "*"
pandas = "*"
torch = "2.4.1"
facenet-pytorch = "*"
dynaconf = "*"
moviepy = "*"
numpy = ">=1.20.0,<1.24.0"
torchvision = "0.19.1"
comet-ml = "^3.44.3"   
pandera = "^0.20.3"
strongsort = "*"
scikit-learn = "*"
ftfy = "*"
regex = "*"
lapx = "^0.5.5"
filterpy = "^1.4.5"
tensorflow-io-gcs-filesystem = "0.29.0"
yacs = "^0.1.8"
onnxoptimizer = "^0.3.13"
onnxsim = "^0.4.36"
loguru = "^0.7.2"



# The following dependencies are optional and can be uncommented if needed
# toml = "^0.10.2"
# wget = "^3.2"
# tensorflow = "^2.16.1"
# matplotlib = "^3.8.4"
# librosa = "^0.10.1"
# pydub = "^0.25.1"
# dlib = "^19.24.4"
# sphinx = "^7.3.7"
# soundfile = "^0.12.1"
# pyarrow = "^16.0.0"
# fastparquet = "^2024.2.0"
# imutils = "^0.5.4"
# lxml = "^5.2.2"
opencv-python-headless = "^4.10.0.84"
gdown = "^5.2.0"
pyannote-metrics = "^3.2.1"
efficientnet-pytorch = "^0.7.1"
supervision = "^0.25.1"
huggingface-hub = "^0.27.1"
albumentations = "1.3.1"
ultralytics = "^8.3.69"
face-recognition = "^1.3.0"
protobuf = "<3.21"
focal-loss = "^0.0.7"
iterative-stratification = "^0.1.9"
librosa = "^0.11.0"
transformers = {version = ">=4.21.0,<4.30.0", extras = ["torch"]}
seaborn = "^0.13.2"
tensorflow = "2.11.0"
nvidia-cudnn-cu11 = "8.6.0.163"


[tool.poetry.group.dev.dependencies]
ipykernel = "*"
pre-commit = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core==1.8.2"]
build-backend = "poetry.core.masonry.api"


[tool.system-dependencies]
global = ["sox"]
