[tool.poetry]
name = "videollama3"
version = "0.1.0"
description = ""
authors = ["neleSuffo <163427736+neleSuffo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
transformers = "^4.55.2"
accelerate = "^1.10.0"
sentencepiece = "^0.2.1"
pillow = "^11.3.0"
opencv-python = "^4.12.0.88"
ffmpeg-python = "^0.2.0"
gradio = "^5.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
